kubernetes/apps/indexers-automation/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: automation
  labels:
    app.kubernetes.io/name: indexers-automation
    app.kubernetes.io/part-of: homelab
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
