kubernetes/apps/indexers-automation/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: automation
  labels:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/component: indexer-manager
    app.kubernetes.io/part-of: indexers-automation
spec:
  type: ClusterIP
  ports:
  - port: 9696
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: prowlarr
    app.kubernetes.io/component: indexer-manager
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: automation
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/component: request-manager
    app.kubernetes.io/part-of: indexers-automation
spec:
  type: ClusterIP
  ports:
  - port: 5055
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/component: request-manager
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: automation
  labels:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/component: cloudflare-solver
    app.kubernetes.io/part-of: indexers-automation
spec:
  type: ClusterIP
  ports:
  - port: 8191
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: flaresolverr
    app.kubernetes.io/component: cloudflare-solver
